--- a/index.html
+++ b/index.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Search</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <link href='app.css' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-    <div id="app">
-      <div class="App">
-        <div class="Loader">loading...</div>
-        <article class="main">
-          <header class="Header">
-            <h1>Song Search</h1>
-            <div class="SearchBox">
-              <div class="Search">
-                <input type="text" autoComplete="none" autoCorrect="none" autoCapitalize="none" spellCheck="false" />
-                <button class="clear">&times;</button>
-              </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 
-              </div>
-            </div>
-          </header>
+</head>
+<body>
+    <input type="file" id="file" />
+    <button id="search-keyword">Search</button>
+    <input type="text" id="myInput" placeholder="Search for names..">
 
-          <ul class="SongList">
-          </ul>
-        </article>
-      </div>
-    </div>
-    <script src="app.js" type="text/javascript"></script>
-  </body>
+    <ul class="sentence-list">
+    </ul>
+    <script src="app.js"></script>
+
+</body>
 </html>
-
