--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vietsent - Vietnamese Example Sentence Search Engine</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <input type="file" id="file" />
-    <button id="search-keyword">Search</button>
-    <input type="text" id="myInput" placeholder="Search for names..">
+    <input id="myInput" type="text" placeholder="Tìm câu ví dụ" onkeyup="searchSentences()">
+    <!-- <button id="search-keyword">Search</button> -->
+    <ul class="sentence-list"></ul>
 
-    <ul class="sentence-list">
-    </ul>
     <script src="app.js"></script>
 
 </body>
