Cập nhật thêm đôi chút cho thiết kế trang tìm kiếm

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 
 </head>
 <body>
-    <input id="myInput" type="text" placeholder="Tìm câu ví dụ" onkeyup="searchSentences()">
-    <!-- <button id="search-keyword">Search</button> -->
+    <input id="myInput" type="text" placeholder="Tìm câu ví dụ">
+    <button id="search-keyword" class="button">Search</button>
     <ul class="sentence-list"></ul>
 
+    <div id="landing">
+        <h2>Vietnamese Example Sentence Search Engine</h2>
+        <p>idk what should I type here. You can type the word you wanna search on the searchbar above and then click "Search" to perform Search.</p>
+        <p>Wanna contribute? Visit the <a href="https://github.com/duy103zxc/vietsent">github repo</a></p>
+    </div>
     <script src="app.js"></script>
 
 </body>
