--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vietsent - Vietnamese Example Sentence Search Engine</title>
+    <title>Massip.vn</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -13,8 +13,8 @@
     <ul class="sentence-list"></ul>
 
     <div id="landing">
-        <h2>Vietnamese Example Sentence Search Engine</h2>
-        <p>idk what should I type here. You can type the word you wanna search on the searchbar above and then click "Search" to perform Search.</p>
+        <h2>Search example sentences in Vietnamese</h2>
+        <p>You can type the word you wanna search on the searchbar above and then click "Search" to perform Search.</p>
         <p>Wanna contribute? Visit the <a href="https://github.com/duy103zxc/vietsent">github repo</a></p>
     </div>
     <script src="app.js"></script>
