Cap nhat lai cau truc trang, toan bo

--- a/about.html
+++ b/about.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Punbo - About</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    A site that helps you look up vietnamese example sentences.
+    <h1>Punbo - learning vietnamese btw</h1>
+    <p>A site that helps you look up vietnamese example sentences.</p>
+
+    <a href="index.html">homepage</a>
+
+    <h2>Dataset</h2>
+    <p>The example sentence dataset is taken from these sources:</p>
+    <ul>
+        <li><a href="https://tatoeba.org/en/sentences/show_all_in/vie/none">Tatoeba Vietnamese</a></li>
+        <li><a href="https://ln.hako.vn/sang-tac">Truyện tự sáng tác - Hako</a></li>
+    </ul>
 </body>
 </html>
