--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Massip.vn</title>
+    <title>Punbo: Collection of Vietnamese example sentences</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -14,8 +14,9 @@
 
     <div id="landing">
         <h2>Search example sentences in Vietnamese</h2>
-        <p>You can type the word you wanna search on the searchbar above and then click "Search" to perform Search.</p>
+        <p>You can type the word you wanna search on the searchbar above and then click "Search" or press "Enter" to perform Search.</p>
         <p>Wanna contribute? Visit the <a href="https://github.com/duy103zxc/vietsent">github repo</a></p>
+        <p><a href="about.html">About</a></p>
     </div>
     <script src="app.js"></script>
 
